[gd_scene load_steps=6 format=3 uid="uid://c5fj4ngh1ucgm"]

[ext_resource type="Script" path="res://character and weapons/bulletBase/bullet_phys.gd" id="1_p1bjr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f535g"]
radius = 0.04
height = 0.17

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8yfn0"]
albedo_color = Color(1, 0.827451, 0.2, 1)
metallic = 0.5
roughness = 0.75

[sub_resource type="CylinderMesh" id="CylinderMesh_rb77b"]
top_radius = 0.025
bottom_radius = 0.035
height = 0.135
radial_segments = 8
rings = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bym8n"]
margin = 1.0
radius = 0.05
height = 0.2

[node name="bullet_base" type="RigidBody3D"]
collision_layer = 0
collision_mask = 16
mass = 5.0
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_p1bjr")
projectile_speed = -5.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_f535g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.00455758)
material_override = SubResource("StandardMaterial3D_8yfn0")
mesh = SubResource("CylinderMesh_rb77b")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
collision_layer = 0
collision_mask = 976

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_bym8n")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_shape_entered" from="Area3D" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_shape_entered" from="Area3D" to="." method="_on_area_3d_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
